2013-03-11: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Authenticator.[h|m]
	  fix header inclusion for pam, and use setpgid() instead
	  of setpgrp()
	* LoginPanelController.m
	  verified variable only necessary when HAVE_PAM
	* LoginWindow.m
	  unsigned int -> NSUInteger
	* loginpanel_main.m
	  include missing header
	* GNUmakefile.preamble
	  add parameter have-pam, set it to yes, when you
	  want to use pam for authentication, and do not link
	  against -lcrypto on OpenBSD
	* README
	  add note about have-pam